deployment/plat-app-services/reccommender/data_policy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datapolicy-deployment
  labels:
    app: datapolicy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datapolicy
  template:
    metadata:
      labels:
        app: datapolicy
    spec:
      containers:
      - name: datapolicy
        image: orchestracities/amon-management-api:dev-test
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8075
---
apiVersion: v1
kind: Service
metadata:
  name: datapolicy-service
spec:
  type: NodePort
  selector:
    app: datapolicy
  ports:
    - protocol: TCP
      port: 8075
      targetPort: 8075
      nodePort: 30100
