deployment/plat-app-services/reccommender/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pv0001-storage
          mountPath: /var/lib/postgresql/data
      volumes: 
      - name: pv0001-storage
        persistentVolumeClaim:
          claimName: task-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
